--- a/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -238,48 +238,48 @@ CSA_social_revolution:0 "사회 혁명"
 CSA_social_revolution_desc:0 "자유의 땅과 용감한 이들의 고향이 무엇이든 간에, 우리는 미국을 부패, 인종주의와 우월주의로부터 해방시키기 위해 노력해야 합니다. 하지만 우선 우리는 이 모든 것의 핵심인 자본주의 체제 자체를 무너뜨려야만 합니다!"
 
 CSA_redistribute_wealth:0 "재산 재분배"
-CSA_redistribute_wealth_desc:0 "우리는 수백만 달러를 사용할 수 있으면서도 아무것도 안하는 사람들과 하루 동일 일하면서도 겨우 비참한 삶을 연장하는 수백만의 무산자 계급의 공존을 옹호하는 사회 질서를 더 이상 용인하지 않을 것입니다. 은행과 자본 축적가 그리고 기업가들은 모두 여기서 끝날 것입니다.“
+CSA_redistribute_wealth_desc:0 "아무 것도 하지 않고도 수백만 달러를 가지고 있는 자와, 하루 종일 일하면서도 겨우 비참한 삶을 연장하는 수백만의 무산자 계급의 공존을 옹호하는 사회 질서를 우리는 더 이상 용인하지 않을 것입니다. 은행과 자본가 그리고 기업가들의 미소는 이제 끝났습니다."
 CSA_homes_for_the_people:0 "인민들에게 집을"
-CSA_homes_for_the_people_desc:0 "지주들과 부동산 놀이터는 이 국가에 질병처럼 존재했습니다. 이제 힘 있고 부자인 사림들이 그들의 자리에서 쫒겨났기 때문에, 가난하고 빈곤자들은 그들의 슬럼에서 벗어날 수 있을 것입니다."
+CSA_homes_for_the_people_desc:0 "지주들의 부동산 투기 놀이는 이 국가에 질병처럼 존재했습니다. 이제 우리가 힘 있는 자본가들을 끌어내렸기 때문에, 가난하고 빈곤한 자들이 마침내 빈민가에서 벗어날 수 있을 것입니다."
 CSA_emancipation_for_all:0 "모두에게 해방을"
-CSA_emancipation_for_all_desc:0 "피부의 색깔을 기반으로 허세를 떠는 것과 같은 어리석고 헛된 것이 인민들에게 영향을 주고 있습니다. 어떤 인종이나 신념을 가지건 무산자들은 새로운 미국을 수립하기 위해 싸우고 분투해야 합니다. 또한 충직한 이민자들에게는 해방의 정신에 의거하여 본토인과 같은 시민권을 제공해야 합니다."
+CSA_emancipation_for_all_desc:0 "겨우 피부색을 가지고 허세를 떠는 등 어리석고 헛된 짓거리들이 인민들에게 영향을 주고 있습니다. 어떤 인종이나 신념을 가지건 무산자들은 새로운 미국을 수립하기 위해 싸우고 분투해야 합니다. 또한 충직한 이민자들에게는 해방의 정신에 의거하여 본토인과 같은 시민권을 제공해야 합니다."
 CSA_womens_liberation:0 "여성들의 해방"
-CSA_womens_liberation_desc:0 "남자들이 전선에서 쓰러지는 동안, 여자들은 남자들을 대신하여 군수품을 만들고 공장을 운영하며 혁명에 기여하고 있었습니다! 자신들이 가진걸 모두 바친 수많은 여성 파일럿과 간호사 그리고 여성 민병대원들은 말할 것도 없을 겁니다. 그들의 희생과 분투는 이제 절대로 헛되지 않을 겁니다.“
+CSA_womens_liberation_desc:0 "남성들이 전선에서 쓰러져가는 동안, 여성들은 남성들을 대신하여 군수품을 만들고 공장을 운영하며 혁명에 기여하고 있었습니다! 자신들이 가진걸 모두 바친 수많은 여성 파일럿과 간호사 그리고 여성 민병대원들은 말할 것도 없을 겁니다. 그들의 희생과 분투는 이제 절대로 헛되지 않을 것입니다."
 CSA_revolutionary_education:0 "혁명 교육"
-CSA_revolutionary_education_desc:0 "교육 현장은 수많은 혁명가들을 양성했지만, 본질적으로 그 교육 체제는 계속 반동적이었습니다. 미국 역사에 있어서, 교육은 순종적인 노동자와 악한 자본가 그리고 양심 없는 정치인을 양성했죠. 그것을 끝낼 시간입니다!"
+CSA_revolutionary_education_desc:0 "구 미국의 교육은 수많은 혁명가들을 양성했지만, 본질적으로 그 교육 체제는 계속 반동적이었습니다. 미국 역사에 있어서, 교육은 순종적인 노동자와 악한 자본가 그리고 양심 없는 정치인을 양성했습니다. 그것을 끝낼 시간입니다!"
 CSA_reconstruction:0 "재건 작업 착수"
-CSA_reconstruction_desc:0 "내전은 우리 국가의 많은 부분을 파괴했습니다. 많은 농촌들은 진흙과 유골만 남아있고, 수많은 도시들은 연기만 나는 파편이 되었을 뿐입니다. 따라서 우리는 새로운 집과 인프라를 가능한 건설하도록 노력해야 할 것입니다."
+CSA_reconstruction_desc:0 "내전은 우리 국가의 많은 부분을 파괴했습니다. 수많은 농촌들에 진흙과 뼈만이 뒹굴고 있으며, 수많은 도시들은 지금 연기나는 잿더미에 불과합니다. 따라서 우리는 새로운 주택과 기반 시설들을 가능한 한 많이 건설하도록 노력해야 할 것입니다."
 CSA_deal_with_feds:0 "연방주의자 처리"
-CSA_deal_with_feds_desc:0 "혁명이 일어날 때부터, 우리는 재판을 기다리는 많은 정치적 범죄자들이 쌓여있었습니다. 그리고 전쟁이 끝났기 때문에, 그들을 재판할 시간이 왔습니다. 비록 지도부 중 일부는 이들을 재건에 참여시킬 수 있다고 생각하지만, 다른 급진적인 동무들은 강력한 혁명적인 재판을 요구하고 있습니다.“
+CSA_deal_with_feds_desc:0 "혁명이 시작했을 때부터, 우리 앞에는 재판을 기다리는 많은 정치범들이 쌓여있었습니다. 그리고 전쟁이 끝난 지금, 그들을 심판할 시간이 왔습니다. 우리 지도층 중 일부는 이들을 재건에 참여시킬 수 있다고 생각하지만, 다른 급진적인 동무들은 강력하고 혁명적인 재판을 요구하고 있습니다."
 CSA_transformitive_justice:0 "변형의 재판"
-CSA_transformitive_justice_desc:0 "비록 우리가 구 미국 엘리트들을 처리했지만, 아직도 우리의 새로운 체제에 반대하는 상당규모의 대중적 운동이 여전히 존재합니다. 우리는 우리가 승리했다고 안심하기 전에 이러한 남아있는 반혁명적 조직을 가라앉히고 우리 사이의 매 마지막 침입자까지 추격해야 합니다.“
+CSA_transformitive_justice_desc:0 "비록 우리가 구 미국 엘리트들을 처단했다고 해도, 아직도 우리의 새로운 체제에 반대하는 상당규모의 대중적 운동이 여전히 존재합니다. 우리는 우리가 승리했다고 안심하기 전에 이러한 남아있는 반혁명적 조직을 가라앉히고 우리 사이사이의 마지막 침입자까지 추격해야만 합니다."
 CSA_deal_with_firsters:0 "미국 우선주의자 처리"
-CSA_deal_with_firsters_desc:0 "휴이롱를 추종하는 어리석은 반동적인 선동자들과 비인간적인 산업가들 그리고 독재적인 장군들은 마침내 재판에 서게 되었습니다. 비록 휴이 롱은 해외로 도주하였지만, 우리는 그와 협조한 사람들을 모두 공정하게 처벌 할 것입니다.“
+CSA_deal_with_firsters_desc:0 "휴이 롱을 추종하는 어리석은 반동적인 선동가들과 비인간적인 산업가들 그리고 권위주의적인 장군들은 마침내 재판정에 서게 되었습니다. 비록 휴이 롱은 해외로 도주하였지만, 우리는 그와 협조한 사람들을 모두 사이좋게 처벌할 것입니다."
 CSA_destroy_jim_crow:0 "짐 크로를 파괴하라"
-CSA_destroy_jim_crow_desc:0 "남부 테러리스트들을 제거하는 것은 단순한 군사적 문제만은 아닙니다. 우리는 편협한 신앙과 인종차별주의 같은 미국에 수백년간 존재하던 역병을 뿌리 뽑고 롱에 대한 개인 숭배를 부술 것입니다. 우리는 링컨의 유산을 딕시들에게 최종적으로 전파 할 것입니다!"
+CSA_destroy_jim_crow_desc:0 "남부 테러리스트들을 제거하는 것은 단순한 군사적 문제만은 아닙니다. 우리는 편협한 신앙과 인종차별주의 같은 미국에 수백년간 존재하던 역병을 뿌리뽑고 롱에 대한 개인 숭배를 파괴할 것입니다. 우리는 링컨의 유산을 딕시들에게 최종적으로 전파할 것입니다!"
 CSA_equality_for_all:0 "모두에게 평등을"
-CSA_equality_for_all_desc:0 "자유를 위한 오래된 전쟁은 거의 다 끝나갑니다. 구시대의 관습과 공포는 이제 사라졌고, 곧 미국에 있던 불의들은 사라지고 오직 씁쓸한 기억과 역사 책 속에서나 남을 것입니다.“ 
+CSA_equality_for_all_desc:0 "자유를 위한 오랜 전쟁이 막바지를 보이고 있습니다. 구시대의 관습과 공포는 이제 사라졌고, 곧 미국에 있던 불의들은 사라지고 오직 씁쓸한 기억과 역사책 속에서나 남게 될 것입니다."
 CSA_reconstruction_is_over:0 "재건 작업의 종결"
-CSA_reconstruction_is_over_desc:0 "이 국가가 저지른 범죄들은 마침내 씻겨 졌습니다. 심지어 구체제를 파괴하기 위해 과정에서 철과 피가 필요했어도, 우리는 과거에 폐허에서부터 새로운 세상을 일으켜 세웠습니다. 이 땅은 노동자들이 자유롭고 평등하며 번영하게 되었습니다.“
+CSA_reconstruction_is_over_desc:0 "이 국가가 저지른 죄악들은 마침내 씻겨졌습니다. 비록 구 체제를 파괴하기 위한 과정에서 많은 철과 피가 필요하긴 했지만, 우리는 과거의 폐허에서부터 새로운 세상을 일으켜 세웠습니다. 이 땅은 노동자들이 자유롭고 평등하며 번영하게 되었습니다."
 CSA_a_new_america:0 "새로운 미국"
-CSA_a_new_america_desc:0 "세상에서 게으른 벌을 가지고 국가는 우리밖에 없을 겁니다. 우리는 광범위한 토대를 닦아 놓았으며, 하늘을 향한 돌을 쌓아 올렸습니다. 우리는 노예가 아니라 주인으로써 이 모든 것을 소유했습니다. 노동조합은 우리를 강하게 합니다!“ 
+CSA_a_new_america_desc:0 "세상에서 게으른 벌을 가지고 국가는 우리밖에 없을 겁니다. 우리는 광범위한 토대를 닦아 놓았으며, 하늘을 향한 돌을 쌓아 올렸습니다. 우리는 노예가 아니라 주인으로써 이 모든 것을 소유했습니다. 노동조합은 우리를 강하게 합니다!"
 ### American Commonwealth Focuses ###
 CSA_second_convention:0 "2차 헌법 제정 회의" 
 CSA_second_convention_desc:0 "우리의 혁명 투쟁의 다음 단계를 결정할 때가 왔습니다. 단 하나의 대의와 이념 아래 노동자들을 통합할 방법을 찾기 위해서 말입니다. 한 세기 전에 그랬듯이, 우리는 필라델피아에서 헌법 제정 회의를 열 것입니다!" 
 CSA_american_commonwealth:0 "노동자 연방"
-CSA_american_commonwealth_desc:0 "우리는 독재체제로 후퇴 할 수는 없습니다. 2차 헌법 제정 회의에서의 우리의 헌신적인 지원으로 마침내 자유지상주의적 사회주의를 보여 줄 것입니다. 이것은 위선적인 낭만적 국가주의 형태가 아니라, 우리 국가의 노동자와 노역자에게 사회인 그리고 경제적인 자유를 제공 할 것입니다. 이것은 첫 번째 조항에서 다룰 것입니다.“
+CSA_american_commonwealth_desc:0 "독재체제로 후퇴할 수는 없습니다. 2차 헌법 제정 회의에서의 우리의 헌신적인 지원으로 마침내 자유지상주의적 사회주의를 보여 줄 것입니다. 이것은 위선적인 낭만적 국가주의 형태가 아니라, 우리 국가의 노동자와 노역자에게 사회인 그리고 경제적인 자유를 제공할 것입니다. 이것은 첫 번째 조항에서 다룰 것입니다."
 CSA_protect_the_working_class:0 "노동자 계급을 보호하라!"
-CSA_protect_the_working_class_desc:0 "많은 더 나은 경제적 체제에 대한 새로운 생각과 이론이 미국에서 존재했지만, 내전의 혼란은 이러한 아이디어를 실현하는 것을 어렵게 했습니다. 그리고 지금 우리는 충분한 시간과 기회를 가졌음으로 헌법에 써진 노동자 권리 보호를 실현하여, 진정으로 일하는 사람들의 공화국을 만들 수 있을 것입니다.“
+CSA_protect_the_working_class_desc:0 "많은 더 나은 경제적 체제에 대한 새로운 생각과 이론이 미국에서 존재했지만, 내전의 혼란은 이러한 아이디어를 실현하는 것을 어렵게 했습니다. 그리고 지금 우리는 충분한 시간과 기회를 가졌음으로 헌법에 써진 노동자 권리 보호를 실현하여, 진정으로 일하는 사람들의 공화국을 만들 수 있을 것입니다."
 CSA_empower_councils:0 "시청 민주주의"
-CSA_empower_councils_desc:0 "새로운 연방은 권위주의적 방법을 통해 건설되어서는 안 되며. 우리는 더 나은 계급적 특성으로 우리의 민주적인 방식으로 건설되어야 합니다. 법을 통해서 풀뿌리 민주주의와 시의회 참여에 힘을 줄 것입니다. 이제 정치적 결정은 더 이상 단순히 의회에서 속삭임이 아닙니다. 이러한 것은 이제 노동자의 권리가 될 것입니다.!“
+CSA_empower_councils_desc:0 "새로운 연방은 권위주의적 방법을 통해 건설되어서는 안 되며. 우리는 더 나은 계급적 특성으로 우리의 민주적인 방식으로 건설되어야 합니다. 법을 통해서 풀뿌리 민주주의와 시의회 참여에 힘을 줄 것입니다. 이제 정치적 결정은 더 이상 단순히 의회에서 속삭임이 아닙니다. 이러한 것은 이제 노동자의 권리가 될 것입니다.!"
 CSA_mutal_economic_comitee:0 "상호 경제 위원회“
-CSA_mutal_economic_comitee_desc:0 "자본주의 체제를 끝내는 것은 매우 어려운 일입니다. 그리고 이 일은 단지 현 상태 유지와 경제적 계획만 가지고 희망 할 수는 없습니다. 그래서 의회는 지역의 정치적 대표, 경제학자, 그리고 노동자들이 서로 도와서 자유 시장 경제에서 사회주의로 전환시키기 위한 위원회를 구성하기로 했습니다.
+CSA_mutal_economic_comitee_desc:0 "자본주의 체제를 끝내는 것은 매우 어려운 일입니다. 그리고 이 일은 단지 현 상태 유지와 경제적 계획만 가지고 희망 할 수는 없습니다. 그래서 의회는 지역의 정치적 대표, 경제학자, 그리고 노동자들이 서로 도와서 자유 시장 경제에서 사회주의로 전환시키기 위한 위원회를 구성하기로 했습니다."
 CSA_councilism:0 “평의회주의"
-CSA_councilism_desc:0 "미국의 낡은 관료제를 유지하는 것은 좋지 않습니다. 또한 그것은 중앙 집권적 정치 영향력과 반동적 사상을 퍼트릴 위험까지 있죠. 그렇기 때문에 새로운 권력 위임 기구들이 필요합니다. 직장 민주주의가 활발하게 성공을 입증하는 중이고 따라서 평의회에 기초된 생디칼리즘 체제를 도입하는 것이 가장 적당할 것입니다..“
+CSA_councilism_desc:0 "미국의 낡은 관료제를 유지하는 것은 좋지 않습니다. 또한 그것은 중앙 집권적 정치 영향력과 반동적 사상을 퍼트릴 위험까지 있죠. 그렇기 때문에 새로운 권력 위임 기구들이 필요합니다. 직장 민주주의가 활발하게 성공을 입증하는 중이고 따라서 평의회에 기초된 생디칼리즘 체제를 도입하는 것이 가장 적당할 것입니다.."
 CSA_federalism:0 "연방주의"
-CSA_federalism_desc:0 "비록 구 미국이 정치적 부패와 게리멘더링 그리고 비효율적 행정 조직의 원산지였지만, 그 행정 체제는 우리 국가의 정체성의 초석이었죠. 우리는 우리 시민들이 가진 주에 대한 애정을 파괴할 수 없습니다. 대신 우리는 주의 오래된 결함을 조정 할 수 있을 것입니다.“
+CSA_federalism_desc:0 "비록 구 미국이 정치적 부패와 게리멘더링 그리고 비효율적 행정 조직의 원산지였지만, 그 행정 체제는 우리 국가의 정체성의 초석이었죠. 우리는 우리 시민들이 가진 주에 대한 애정을 파괴할 수 없습니다. 대신 우리는 주의 오래된 결함을 조정 할 수 있을 것입니다."
 CSA_power_to_the_people:0 "인민들에게 권력을!"
-CSA_power_to_the_people_desc:0 "아마 우리 역사 초기에는 진정한 민주주의가 번영했을 것입니다. 탐욕스러운 자본가와 부패한 정치인들 간의 연관으로 인해 자유가 허상이 되지 않고 말이죠. 이제 진정한 직접 민주주의적 통치 수단을 통해 새로운 연방을 직접 이끌 수 있게 되었습니다. 우리는 이러한 약속을 헌법 조항에 써 넣어서 영원히 유지할 것입니다.“
+CSA_power_to_the_people_desc:0 "아마 우리 역사 초기에는 진정한 민주주의가 번영했을 것입니다. 탐욕스러운 자본가와 부패한 정치인들 간의 연관으로 인해 자유가 허상이 되지 않고 말이죠. 이제 진정한 직접 민주주의적 통치 수단을 통해 새로운 연방을 직접 이끌 수 있게 되었습니다. 우리는 이러한 약속을 헌법 조항에 써 넣어서 영원히 유지할 것입니다."
 CSA_federalist_economics:0 "연방주의자 경제정책"
 CSA_federalist_economics_desc:0 "많은 노조 연맹의 성직자들은 시장 사회주의에 대해서 ‘혁명을 배반한다고’ 생각합니다. 하지만 그들이 착각하는 것은 미국의 자본주의 역사는 200년이 넘는다는 것이죠. 우리는 사회주의로 이행하기 위한 과도기적 경제 체제가 필요합니다. 그래서 의회는 한계 비용을 맞추기 위한 가격 조정을 권장하는 법안을 통과시켰습니다."
 CSA_mutualism:0 "상호주의"
@@ -287,33 +287,33 @@ CSA_mutualism_desc:0 "프루동의 이론인 상호주의는 우리들의 개혁
 CSA_workers_cooperatives:0 "노동자 협동조합“
 CSA_workers_cooperatives_desc:0 "노동조합의 지배는 기업의 죽음을 의미하는 것이 압니다. 우리는 단순히 불공정한 이익을 추구하는 사업자를 쫒아내는 것을 원할 뿐입니다. 대신에 노동자들이 그들의 작업장을 운영하고 거기서 나오는 부를 그들 스스로 공정하게 분배할 것입니다."
 CSA_social_dividends:0 "사회적 분배"
-CSA_social_dividends_desc:0 "평의회는 기본 소득제 도입하는 법안을 통과시켰습니다. 국영기업에서 나오는 모든 이윤의 일부를 시민들에게 분배 될 것입니다. 우리 노동자들이 단순한 수동적 존재가 아니라 우리 국가의 운영을 주시하는 존재입니다. 그렇기 때문에 그들은 미국의 공공 자산의 일부를 받을 자격이 있습니다.“
+CSA_social_dividends_desc:0 "평의회는 기본 소득제 도입하는 법안을 통과시켰습니다. 국영기업에서 나오는 모든 이윤의 일부를 시민들에게 분배 될 것입니다. 우리 노동자들이 단순한 수동적 존재가 아니라 우리 국가의 운영을 주시하는 존재입니다. 그렇기 때문에 그들은 미국의 공공 자산의 일부를 받을 자격이 있습니다."
 CSA_public_owned_enterprise:0 "대중이 보유한 기업"
 CSA_public_owned_enterprise_desc:0 "공기업은 오랫동안 미국에서 회피되었던 문제였고, 수많은 미국의 전 대통령들이 그들의 유권자보다 대기업에게 더 큰 관심을 가졌습니다. 그리고 지금 그러한 기업들은 모두 분쇄되었으니. 의회는 공기업을 합법화하고 감독 할 것입니다. 곧 미국의 복지국가로써 번영이 다가올 것입니다!"
 CSA_american_syndicalism:0 "미국 생디칼리즘"
 CSA_american_syndicalism_desc:0 "미국은 마침내 자본주의를 뒤로 하고 빛나는 미래를 향한 첫 번째 이행기로 들어섰습니다. 비록 평의회에서 몇몇 의원들은 ‘미국적 특색의 생디칼리즘’에 대해 거부하고 있지만, 그들은 산업의 성장과 힘 앞에서는 불평하지 않을 것이며, 우리 인민들은 이러한 거대한 번영을 기뻐하는 중입니다!"
 CSA_unionist_economics:0 "노조주의자 경제정책"
-CSA_unionist_economics_desc:0 "비록 일부는 미국의 자본주의와 생디칼리즘이 결합된 정책을 옹호하지만, 우리가 구 체제와 타협할 수 없음은 명백합니다. 이제 노동조합들이 우리 경제를 지배하기 위해 일어나야 하며, 조합은 이제 연방정부의 모든 부분에 권한을 가지게 될 것입니다.“
+CSA_unionist_economics_desc:0 "비록 일부는 미국의 자본주의와 생디칼리즘이 결합된 정책을 옹호하지만, 우리가 구 체제와 타협할 수 없음은 명백합니다. 이제 노동조합들이 우리 경제를 지배하기 위해 일어나야 하며, 조합은 이제 연방정부의 모든 부분에 권한을 가지게 될 것입니다."
 CSA_industrial_unionism:0 "노동자 의회"
 CSA_industrial_unionism_desc:0 "시장은 수요와 공급 또는 투자자의 변덕에 따라서 결정되었지만, 우리의 새로운 체제는 노동자에 의하여 만들어 질것입니다. 평의회는 노동자들이 그들이 보유한 코뮌과 지자체들을 최소한의 간섭을 받으며 자유롭게 감독해야 한다고 선언했습니다."
 CSA_workers_self_managment:0 "노동자 자주 경영"
 CSA_workers_self_managment_desc:0 "평의회의 위대한 목표는 미국 직장 안에 스며든 구시대의 계층 구조를 타바하는 것입니다. 그래서 법적으로 간부들과 주주들의 투표권을 불법화 했습니다. 그로 인해 지금 노동조합들은 모든 생산수단을 통제할 수 있게 된 것입니다!“
 CSA_industrial_democracy:0 "산업 민주주의"
-CSA_industrial_democracy_desc:0 "민주주의는 미국의 정체성 그 자체입니다. 그러나 공장의 문 앞에서는 민주주의는 마치 하찮은 잎 마냥 남아있었고, 그로 인해 미국인들이 작은 독재자들의 노예가 되었습니다. 이제 더 이상 이런 일은 없을 것입니다. 평의회는 민주적인 목표를 위해서 노동조합 간에 협력을 촉진할 새로운 산업 민주주의 위원회를 설립했습니다.“
+CSA_industrial_democracy_desc:0 "민주주의는 미국의 정체성 그 자체입니다. 그러나 공장의 문 앞에서는 민주주의는 마치 하찮은 잎 마냥 남아있었고, 그로 인해 미국인들이 작은 독재자들의 노예가 되었습니다. 이제 더 이상 이런 일은 없을 것입니다. 평의회는 민주적인 목표를 위해서 노동조합 간에 협력을 촉진할 새로운 산업 민주주의 위원회를 설립했습니다."
 CSA_agricultural_unions:0 "농업 조합"
 CSA_agricultural_unions_desc:0 "농업 부분은 우리 국가를 먹일 책임이 있습니다. 그러나 광범위한 지침 외에는 농민들이 스스로 경작 할 수 있게 허락할 겁니다. 평의회는 농경지대를 탈 규제할 것입니다. 자발적인 결심만이 강제 집산화나 쿼터을 넘는 진정한 사회주의를 가져 올 것입니다."
 CSA_syndicalist_economics:0 "탈중앙화 계획"
-CSA_syndicalist_economics_desc:0 "정부는 도시와 국가 안에서 이웃과의 긴밀한 협력과 잘 기능되는 사회 질서를 유지하는 자립된 코뮌을 창출했습니다. 비록 이 시스템이 유토피아에 가까운 것은 절대 아니지만, 진정한 노동자의 낙원의 첫걸음이 될 것입니다!“
+CSA_syndicalist_economics_desc:0 "정부는 도시와 국가 안에서 이웃과의 긴밀한 협력과 잘 기능되는 사회 질서를 유지하는 자립된 코뮌을 창출했습니다. 비록 이 시스템이 유토피아에 가까운 것은 절대 아니지만, 진정한 노동자의 낙원의 첫걸음이 될 것입니다!"
 CSA_protect_the_revolution:0 "혁명을 수호하라!"
 CSA_protect_the_revolution_desc:0 "혁명 정신을 수호하고 유지하는 것은 다가오는 미래에 가장 중요한 요소입니다. 우리는 해외의 반동적 세력의 압력과 우리 국가에서 불평분자들의 사보타주 그리고 우리 지도력 안에서는 분파주의적 다툼에 직면해있습니다. 하지만 우리의 의지는 부셔지지 않을 것입니다. 우리의 투쟁은 계속 될 것입니다!"
 CSA_general_defense_comitte:0 "일반 방어 위원회"
-CSA_general_defense_comitte_desc:0 "군대 지도력과 우리 국가의 방어를 일부 엘리트에게 맡기는 것은 너무 어리석은 발상입니다. 우리는 우리의 연방이 부패로부터 자유롭고 실력을 중시하도록 해야 하기 때문에, 평의회는 조합 조언자와 군사 전략가로 구성된 위원회를 조직했습니다. 이제 더 이상 지원자와 애국자 부족하지 않을 것입니다.“
+CSA_general_defense_comitte_desc:0 "군대 지도력과 우리 국가의 방어를 일부 엘리트에게 맡기는 것은 너무 어리석은 발상입니다. 우리는 우리의 연방이 부패로부터 자유롭고 실력을 중시하도록 해야 하기 때문에, 평의회는 조합 조언자와 군사 전략가로 구성된 위원회를 조직했습니다. 이제 더 이상 지원자와 애국자 부족하지 않을 것입니다."
 CSA_indepedent_media:0 "독립적 언론"
-CSA_indepedent_media_desc:0 "자유로운 미디어와 표현의 자유는 미국인들이 양도 하지 않을 권리입니다. 검열에 대한 요구에도 불구하고, 법원은 표현의 자유에 대한 권리를 재확인시켰습니다. 반동분자들과 반역자들이 그들이 원하는 대로 지껄이도록 내버려 두십죠. 그들의 헛소리는 새로운 시대의 번영을 축하하는 우리 동무들의 환호성에 사라질 것입니다!“
+CSA_indepedent_media_desc:0 "자유로운 미디어와 표현의 자유는 미국인들이 양도 하지 않을 권리입니다. 검열에 대한 요구에도 불구하고, 법원은 표현의 자유에 대한 권리를 재확인시켰습니다. 반동분자들과 반역자들이 그들이 원하는 대로 지껄이도록 내버려 두십죠. 그들의 헛소리는 새로운 시대의 번영을 축하하는 우리 동무들의 환호성에 사라질 것입니다!"
 CSA_strategic_services:0 "전략사무국"
 CSA_strategic_services_desc:0 "일반 방어 위원회가 생각보다 효과적임을 입증했음에도, 너무 개방적이고 대중적이라는 비판을 받았습니다. 우리 인민들로부터 비밀스러운 일을 해야 하는 것은 수치스럽지만, 우리는 적어도 의회에서의 위원회가 혁명 정신을 유지하고 감독하는 것을 보장하게 할 것입니다."
 CSA_the_revolution_continues:0 "혁명의 지속"
-CSA_the_revolution_continues_desc:0 "우리의 민주적 정부가 경제적 번영과 내부적 안정을 가져오기 위해, 우리는 내전의 공포로부터 몇 년간 회복에만 전념해야 했습니다. 하지만 이것이 우리 국가의 허약함과 약함을 의미하는 것이 아닙니다. 투쟁은 계속 될 것입니다. 이제 혁명의 불길은 퍼져나갈 것이고, 연방은 모든 지역에 해방을 전파할겁니다!“
+CSA_the_revolution_continues_desc:0 "우리의 민주적 정부가 경제적 번영과 내부적 안정을 가져오기 위해, 우리는 내전의 공포로부터 몇 년간 회복에만 전념해야 했습니다. 하지만 이것이 우리 국가의 허약함과 약함을 의미하는 것이 아닙니다. 투쟁은 계속 될 것입니다. 이제 혁명의 불길은 퍼져나갈 것이고, 연방은 모든 지역에 해방을 전파할겁니다!"
 ### Union of American States Focuses ###
 CSA_usas:0 "아메리카 사회주의 합중국 연방"
 CSA_usas_desc:0 "The authoritarian is ascendant, as the petty squabbles of the Constitutional Convention have ended in favour of a strong and stable central government. The USAS will show the world that the civil war has done nothing to reduce nations strength and influence, it has merely been redirected to the new revolutionary cause of Vanguardism!"
