--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -174,16 +174,16 @@ USA_native_code_talkers_idea:0 "Native Code Talkers"
 amcivwar_idea:0 "미국을 위해 싸우자!"
 USA_small_arms_industry_idea:0 "소형 화기 산업"
 USA_womens_land_army_idea:0 "여성 육군"
-USA_womens_army_corps_idea:0 "Women's Army Corps"
-USA_national_guards_idea:0 "National Guards"
-USA_defense_logistics_agency_idea:0 "Defense Logistics Agency"
-USA_naval_training_idea:0 "Naval Training"
-USA_liberty_ships_idea:0 "Liberty Ships"
-USA_maritime_industry_idea:0 "Maritime Industry"
-USA_large_marine_corps:0 "Expanded Marine Corps"
-USA_auto_industry_idea:0 "American Automotive Industry"
+USA_womens_army_corps_idea:0 "여성 군단"
+USA_national_guards_idea:0 "주 방위군"
+USA_defense_logistics_agency_idea:0 "병참 부처 보호"
+USA_naval_training_idea:0 "해군 훈련"
+USA_liberty_ships_idea:0 "리버티선"
+USA_maritime_industry_idea:0 "해양 산업"
+USA_large_marine_corps:0 "확충된 해병 군단"
+USA_auto_industry_idea:0 "미국 자동차 산업"
 
-USA_civil_war_aftermath_idea:0 "Recovering from the Civil War"
+USA_civil_war_aftermath_idea:0 "내전피해 복구"
 USA_civil_war_aftermath_idea_desc:0 "While we may have won the Civil War, our country is in ruins. Most people are forced to barter; electrity, running water, and other basic services barely function; and millions are starving or ill, especially the thousands and thousands of orphans."
 USA_civil_war_aftermath_idea2:0 "Slight Recovery from the Civil War"
 USA_civil_war_aftermath_idea2_desc:0 "While we may have stopped the cholera epidemics and famines, most of the country is still on fire. The only place one can find any modicum of stability is the heavily guarded military depots containing newly-delivered famine relief aid and medicine."
@@ -194,11 +194,11 @@ USA_civil_war_aftermath_idea4_desc:0 "Government-run agencies have started to pu
 USA_civil_war_aftermath_idea5:0 "Nearly-Full Recovery from the Civil War"
 USA_civil_war_aftermath_idea5_desc:0 "The scars of the war, visible just months ago, have largely faded from the country. Factories have re-opened, and trains, busses, and other forms of public transportation have started running with some regularity. America has nearly returned to its pre-war standard of living."
 USA_civil_war_depression_idea:0 "Economic Devastation from the Civil War"
-USA_civil_reconstruction_idea:0 "Reconstruction"
-USA_home_of_the_brave_idea:0 "Home of the Brave"
-USA_american_values_ideas:0 "American Values"
-USA_cointelpro_idea:0 "COINTELPRO"
-USA_black_chamber_idea:0 "The Black Chamber"
+USA_civil_reconstruction_idea:0 "재건"
+USA_home_of_the_brave_idea:0 "용사들의 고향"
+USA_american_values_ideas:0 "미국의 가치"
+USA_cointelpro_idea:0 "코인텔프로"
+USA_black_chamber_idea:0 "블랙 체임버"
 USA_socialist_resistance1:0 "Overwhelming Socialist Resistance"
 USA_socialist_resistance1_desc:0 "While we may have won the war against the Combined Syndicates, we have not won the minds of its inhabitants. Syndicalist terrorists attack railroads and factories, and indiscriminantly kill our loyal soldiers and policemen."
 USA_socialist_resistance2:0 "Strong Socialist Resistance"
@@ -225,18 +225,18 @@ USA_federalist_resistance4:0 "Fading Federalist Resistance"
 USA_federalist_resistance4_desc:0 "Only a few die-hard radical Federalist terrorists now remain, with most of their compatriots killed or arrested. One final push to destroy the remaining safehouses hidden in the basements of ruined Washington, and the Maryland and Virginia area will be pacified."
 USA_economic_recovery_idea:0 "Recovering from the Civil War"
 
-USA_recovering_economy_idea:0 "Recovering Economy"
+USA_recovering_economy_idea:0 "경제 복구"
 USA_federal_project_one_idea:0 "Federal Project One"
 USA_national_recovery_act_idea:0 "National Recovery Act"
-USA_workers_management_act_idea:0 "Labor Relations Act"
-USA_social_security_idea:0 "Social Welfare"
+USA_workers_management_act_idea:0 "노동관계법"
+USA_social_security_idea:0 "사회 복지"
 USA_ccc_idea:0 "Civilian Conservation Corps"
 USA_second_bill_of_rights_idea:0 "Social Welfare"
 USA_bastion_of_liberty_idea:0 "Bastion of Liberty"
 USA_american_capitalism_idea:0 "American Capitalism"
-USA_american_creed_idea:0 "Americanism"
-USA_americanism_idea:0 "Americanism"
-USA_restoring_confidence:0 "Restoring Confidence"
+USA_american_creed_idea:0 "미국주의"
+USA_americanism_idea:0 "미국주의"
+USA_restoring_confidence:0 "신뢰 회복"
 USA_empowered_army_idea:0 "Empowered Army"
 
 USA_military_defense_idea:0 "Inter-American Defense Board"
@@ -253,10 +253,10 @@ USA_federalist_attack:0 "Federalist Attack"
 USA_longist_attack:0 "Longist Attack"
 USA_intelligence_sharing_idea:0 "Inter-American Intelligence Agency"
 
-ACW_building_navy:0 "Building a Navy"
+ACW_building_navy:0 "해군 건설"
 
 ### Decisions ###
-USA_expanding_the_league:0 "Expanding the League"
+USA_expanding_the_league:0 "연맹 확장"
 USA_expanding_the_league_desc:0 "We should work to expand the League of American States so that all countries in both North and South America are a part of it."
 USA_invite_mexico:0 "invite Mexico to the League"
 USA_invite_yucatan:0 "invite Yucatan to the League"
