--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -1,12 +1,12 @@
 l_english:
 
 ### Parties ###
-USA_totalist_party:0 "미국 사회주의당"
-USA_totalist_party_long:0 "미국 사회주의당"
-USA_syndicalist_party:0 "미국 사회주의당"
-USA_syndicalist_party_long:0 "미국 사회주의당"
-USA_radical_socialist_party:0 "미국 사회주의당"
-USA_radical_socialist_party_long:0 "미국 사회주의당"
+USA_totalist_party:0 "미국 사회당"
+USA_totalist_party_long:0 "미국 사회당"
+USA_syndicalist_party:0 "미국 사회당"
+USA_syndicalist_party_long:0 "미국 사회당"
+USA_radical_socialist_party:0 "미국 사회당"
+USA_radical_socialist_party_long:0 "미국 사회당"
 USA_social_democrat_party:0 "진보당"
 USA_social_democrat_party_long:0 "진보당"
 USA_social_liberal_party:0 "공화당"
@@ -124,7 +124,7 @@ monroe_doctrine_reinstituted:0 "먼로 독트린이 개정됨"
 USA_civil_war_avoided_flag:0 "내전을 피함"
 USA_civil_war_over_flag:0 "내전이 끝남"
 USA_civil_war_begun_flag:0 "내전이 시작됨"
-macarthur_keeps_power_flag:0 "맥아더가 비상 지휘권력을 계속 쥐고있음"
+macarthur_keeps_power_flag:0 "맥아더가 긴급통수권을 계속 쥐고있음"
 macarthur_gives_up_power:0 "맥아더가 권력을 포기함"
 USA_democracy_triumphs_flag:0 "민주주의가 승리함"
 league_of_american_states:0 "아메리카 국가 연맹"
@@ -136,7 +136,7 @@ american_russian_alliance:0 "러시아-미국 연합"
 ### ToolTips ###
 USA_macarthur_victory_tooltip:0 "§R맥아더가 미국의 통수권을 인수받습니다§!\n"
 USA_semper_fi_tooltip:0 "§G해병대의 정예군이 만들어질 것입니다§!\n"
-USA_trade_contracts_tooltip:0 "We shall seek to improve trade relations around the world\n"
+USA_trade_contracts_tooltip:0 "우리는 전세계 국가들과의 무역관계를 개선시킬 것입니다\n"
 us_research_name:0 "Inter-American Defense College\n"
 us_research_desc:0 "The Inter-American Defense College is designed to improve science and develop research with members of the League of American States.\n"
 USA_join_tech_sharing_tooltip:0 "§MWe shall seek to give technological assistance to our allies.§!\n"
@@ -237,18 +237,18 @@ USA_american_capitalism_idea:0 "미국 자본주의"
 USA_american_creed_idea:0 "미국주의"
 USA_americanism_idea:0 "미국주의"
 USA_restoring_confidence:0 "신뢰 회복"
-USA_empowered_army_idea:0 "권력을 가진 군대"
+USA_empowered_army_idea:0 "권력을 가진 육군"
 
-USA_military_defense_idea:0 "Inter-American Defense Board"
-USA_economic_aide_idea:0 "Pan-American Development Board"
-USA_gi_bill_idea:0 "GI Bill"
+USA_military_defense_idea:0 "미주 방위 위원회"
+USA_economic_aide_idea:0 "범미 개발 위원회"
+USA_gi_bill_idea:0 "제대군인원호법"
 USA_great_migration1:0 "대이주"
 USA_great_migration2:0 "대이주"
 USA_great_migration3:0 "대이주"
 USA_great_migration4:0 "대이주"
 USA_great_migration5:0 "대이주"
 
-USA_socialist_attack:0 "사회주의의 공격"
+USA_socialist_attack:0 "사회주의 공격"
 USA_federalist_attack:0 "Federalist Attack"
 USA_longist_attack:0 "Longist Attack"
 USA_intelligence_sharing_idea:0 "Inter-American Intelligence Agency"
@@ -307,7 +307,7 @@ USA_war_plan_lavender2:0 "연보라색 전쟁계획 - 전쟁선포"
 
 
 
-USA_Pan_American_Development_Foundation:0 "Pan-American Development Foundation"
+USA_Pan_American_Development_Foundation:0 "팬아메리카 개발 재단"
 USA_Pan_American_Development_Foundation_desc:0 "The Pan-American Development Foundation(PADF) is the developmental arm of the League of American States. In this role, PADF works with public and private partners to implement socio-economic development and disaster relief for the members of the League of American States so that the goal of a Hemisphere of Opportunity for All can be achieved. We do this by engaging community-based groups, non-governmental organizations, national and local governments, multilateral organizations, and the private sector in the process of implementing appropriate solutions for sustainable development."
 
 USA_develop_mexico:0 "Industrial Support for Mexico"
@@ -337,20 +337,20 @@ USA_new_monroe_doctrine:0 "신 먼로 독트린"
 USA_new_monroe_doctrine_desc:0 ""
 USA_join_russia:0 "러시아인들과의 동맹"
 USA_join_russia_desc:0 ""
-USA_join_germany:0 "제국조약 가입"
+USA_join_germany:0 "제국 조약 가입"
 USA_join_germany_desc:0 ""
 USA_join_entente:0 "협상국 가입"
 USA_join_entente_desc:0 ""
 USA_join_canada_tech:0 "ISAC 가입"
-USA_join_canada_tech_desc:0 "We should join the ISAC and add our scientific expertise to it."
+USA_join_canada_tech_desc:0 "우리는 ISAC에 가입하여 우리들의 과학적 전문지식을 더해야합니다."
 USA_join_german_tech:0 "카이저 빌헬름 학회 가입"
-USA_join_german_tech_desc:0 "We should join the Kaiser Wilhelm Society and add our scientific expertise to it."
+USA_join_german_tech_desc:0 "우리는 카이저 빌헬름 학회에 가입하여 우리들의 과학적 전문지식을 더해야합니다."
 USA_form_ant:0 "앤틸리스 연방 구성"
 USA_form_ant_desc:0 "Syndicalism tore the United States asunder, and while its foul stain has been exorcised from our own nation, its spectre still haunts the Caribbean. With the West Indies having fallen to its siren song, but Cuban and the Dominican Republic firmly under our influence, we should consider pushing for the two nations to unite as a bulwark against Syndicalism in the region."
 
 USA_reconstruction_decisions:0 "미국을 재건하자"
-USA_reconstruction_decisions_desc:0 "With the civil war now at an end, we must heal the scars that have come from it."
-USA_rebuild_new_england:0 "뉴잉글랜드 재건"
+USA_reconstruction_decisions_desc:0 "내전이 종식됨에 따라, 우리는 내전에서 발생한 피해들을 복구하여야합니다."
+USA_rebuild_new_england:0 "뉴 잉글랜드 재건"
 USA_rebuild_the_south:0 "남부 재건"
 USA_rebuild_the_south_atlantic:0 "남대서양 지역 재건"
 USA_rebuild_the_steel_belt:0 "강철 벨트 재건"
@@ -365,14 +365,14 @@ USA_capital_returns_to_dc:0 "수도를 워싱턴 D.C로 재이전"
 USA_rainbow_war_plans_decisions:0 "무지개색 계획"
 USA_rainbow_war_plans_decisions_desc:0 "The heads of the department of War have come together to craft a series of war plans that have been nicknamed the Rainbow War Plans due to the fact each plan is given a specific colour as their code. We should look into them to see what shall be useful for protecting America."
 
-USA_war_plan_white1:0 "War Plan White - embargo"
-USA_war_plan_white2:0 "War Plan White - declare war"
+USA_war_plan_white1:0 "백색 전쟁계획 - 금수조치"
+USA_war_plan_white2:0 "백색 전쟁계획 - 전쟁선포"
 
-USA_war_plan_orange1:0 "War Plan Orange - embargo"
-USA_war_plan_orange2:0 "War Plan Orange - declare war"
+USA_war_plan_orange1:0 "주황색 전쟁계획 - 금수조치"
+USA_war_plan_orange2:0 "주황색 전쟁계획 - 전쟁선포"
 
-USA_war_plan_gold1:0 "War Plan Gold - embargo"
-USA_war_plan_gold2:0 "War Plan Gold - declare war"
+USA_war_plan_gold1:0 "금색 전쟁계획 - 금수조치"
+USA_war_plan_gold2:0 "금색 전쟁계획 - 전쟁선포"
 
 
 USA_deal_with_terrorists_decisions:0 "Destroy Rebel Terrorists"
@@ -382,7 +382,7 @@ USA_fight_longist_terrorists:0 "Fight Longist Terrorists"
 
 USA_progressive_policy_decisions:0 "진보당 정책"
 USA_progressive_policy_decisions_desc:0 "The Progressive Party has a number of laws and policies it seeks to push for that it passed in their platform."
-USA_progressive_desegregate_the_military:0 "Desegregate the Military"
+USA_progressive_desegregate_the_military:0 "군대 인종차별철폐"
 USA_progressive_desegregate_the_military_desc:0 "'Americans of all races come to America seeking a better life, and Americans of all races seek to fight and preserve American Liberty against her enemies regardless of their race. Yet for far too long that has not been the case and we have segregated the Army and diminished the Light of Liberty just a little. Yet, that ends today for the Army shall no longer be Segregated/'"
 USA_progressive_railroad_nationalization:0 "철도 국영화"
 USA_progressive_western_investment:0 "서부 주에 투자"
@@ -391,16 +391,16 @@ USA_progressive_medicare:0 "국민보건법"
 USA_progressive_farming_subsides:0 "농업 보조금"
 USA_progressive_tariffs:0 "미국 산업체 보호"
 USA_progressive_anti_trust:0 "트러스트 해소"
-USA_progressive_anti_lynching_law:0 "Anti-Lynching Law"
-USA_progressive_minimum_wage:0 "Minimum Wage Law"
+USA_progressive_anti_lynching_law:0 "반 사형법"
+USA_progressive_minimum_wage:0 "최저임금법"
 USA_progressive_public_owned_corporations:0 "Public Owned Corporations"
 USA_progressive_post_office_support:0 "Post Office Expansion"
 
 USA_republican_policies:0 "공화당 정책"
 USA_republican_policies_desc:0 "The Republican Party has a number of laws and policies it seeks to push for that it passed in their platform."
 USA_republican_desegregate_the_military:0 "Desegregate The Military"
-USA_republican_anti_lynching_law:0 "Anti-Lynching Law"
-USA_republican_minimum_wage:0 "Minimum Wage Law"
+USA_republican_anti_lynching_law:0 "반 사형법"
+USA_republican_minimum_wage:0 "최저임금법"
 USA_republican_energy_companies:0 "에너지 회사 지원"
 USA_republican_highway:0 "국도법"
 USA_republican_medicare:0 "국민보건법"
@@ -443,7 +443,7 @@ USA_bill_of_rights:0 "Bill of Rights Reminder"
 USA_bill_of_rights_desc:0 "Building off of a Constitutional education initiative, Congress has approved of an education push to younger Americans on the importance of our Bill of Rights. This will also allow citizens to better appeal for their rights in a nonviolent manner."
 USA_american_values1:0 "미국의 가치"
 USA_american_values1_desc:0 "The passive promotion of civil government through high minded publications was undercut sharply by pamphlets and private publishers that promoted an uncivil government. Congress has decided that a multifaceted approach to instilling American values through mass media will finally undercut pamphleteers."
-USA_restore_legitimacy:0 "Restore Legitimacy"
+USA_restore_legitimacy:0 "정통 복원"
 USA_restore_legitimacy_desc:0 "The numerous embassies we were not able to staff during the crisis have finally received relief. We shall re-establish ourselves to the world community as a stronger and more unified nation with an expanded diplomatic corps."
 USA_malice_and_charity:0 "Malice and Charity"
 USA_malice_and_charity_desc:0 "With the words of president Lincoln reminding us to 'bind the nation's wounds', Congress has created a system to reintegrate the rebel states on a massive scale. Through a nonpartisan Committee called 'Malice and Charity', districts can be re-added to the Union."
@@ -480,17 +480,17 @@ USA_economic_investments:0 "경제 투자"
 USA_economic_investments_desc:0 "A more bold strategy is devised by Congress to assist in economic recovery. Traditional notions that government purchases are negatively associated with growth, newer theories hold that smart purchases can stimulate the economy."
 USA_trial_of_american_companies:0 "Trial of Traitorous Companies"
 USA_trial_of_american_companies_desc:0 "It is time for Congress to hear the testimony of the rebellious companies. Some are advocating for just their executives to resign, while others insist on piercing the corporate veil. This would allow the government to prosecute individual shareholders as responsible for decisions made."
-USA_esmwt:0 "Fate of the Unions"
+USA_esmwt:0 "노동조합의 운명"
 USA_esmwt_desc:0 "It is time for Congress to hear the testimony of rebellious unions. Some are calling for just their chair-people to resign, while others insist on collecting transcripts of union meetings, paving the way for prosecuting all active members."
-USA_rebuild_the_roads:0 "Rebuild America's Roads"
+USA_rebuild_the_roads:0 "미국 도로 재건"
 USA_rebuild_the_roads_desc:0 "The state-funded interstate highway system was easy targets for sabotage. We must cooperate with the states in order to ensure safe commerce and travel through America once more."
 USA_american_industry:0 "American Industrial Might"
 USA_american_industry_desc:0 "The war may have temporarily reinvigorated heavy industry, but its design was temporary and facilities were essentially built on top of closed factories. We must bring our safety and management efficiencies to bear in order to make this upswing permanent."
-USA_rebuild_agriculture:0 "Rebuild Agricultural Industry"
+USA_rebuild_agriculture:0 "농업 산업 재건"
 USA_rebuild_agriculture_desc:0 "In order to transport and process the food to feed our nation, we must encourage innovative preservation and agronomy sciences. Congress has set up a fund to investigate this and several politicians have contributed to it directly."
-USA_aviation_industry:0 "Aviation Industry"
+USA_aviation_industry:0 "항공기 산업"
 USA_aviation_industry_desc:0 "The United States used to lead the world in civilian aircraft manufacturing. Now assembly line systems in Germany have us outpaced. Congress has spoken to intelligence agencies about what we can do to encourage businesses to adopt these techniques, including our contractors."
-USA_farming_subsidies:0 "Farming Subsidies"
+USA_farming_subsidies:0 "농업 보조금"
 USA_farming_subsidies_desc:0 "It is necessary to subsidize farms for crops we are in need of, and paying farmers to terminate their fields of lost assets for products like tobacco we don't need right now, but want the skilled labour to still be available."
 USA_maritime_industry:0 "Maritime Industry"
 USA_maritime_industry_desc:0 "The Merchant Marine was severely damaged in the war, and Congress has approved the extension of veteran benefits to those active duty sailors who are not on tour if they become a Merchant Marine in their downtime."
@@ -499,15 +499,15 @@ USA_synthetic_oil_desc:0 "The Oil Fields of the Midwest burned as our country wa
 USA_reconstruction_finished:0 "Reconstruction Over"
 USA_reconstruction_finished_desc:0 "The years of poor economic management and civil strife have not left our minds, but their most damning effects are diminished."
 ### Post Civil War - Macarthur ###
-USA_american_caeser:0 "The American Caesar"
+USA_american_caeser:0 "미국의 카이사르"
 USA_american_caeser_desc:0 "President MacArthur has proclaimed that he would not secede to partisans that caused the civil war. His American Junta promises a national restoration and adoption of Functional Democracy as MacArthur sees it. Elimination of unnecessary politicians and appointment of more competent officials will bridge the gap between people and politics."
-USA_army_education:0 "Army Education"
+USA_army_education:0 "육군 교육"
 USA_army_education_desc:0 "Parents Organizations have come out to claim we willingly let children into the military underage. Our solution is to divert prospective youth into military education while keeping them in public school. The ideas of physical education and moralist taught by Bellamy will revive that old Nationalist fervour that failed us in the 1910s."
 USA_nationalize_boy_scouts:0 "National Youth Administration"
 USA_nationalize_boy_scouts_desc:0 "The simultaneous pull to mandate a higher working age is countered by the multitudes of unemployed youth strewn across America. The solution is to establish a National Youth Administration in order to provide work and education to Americans too young to vote."
-USA_the_american_legion:0 "The American Legion"
+USA_the_american_legion:0 "미국 재향 군인회"
 USA_the_american_legion_desc:0 "With the American Legion National Commander Smedley Butler now a fugitive, it is necessary to rebuild the organization to remove the stain of partisan politics. No longer will National Commanders be permitted to campaign for politicians, nor will they be permitted to stay once they are career politicians."
-USA_americanism:0 "Loyal to the Flag"
+USA_americanism:0 "국기를 향한 충성"
 USA_americanism_desc:0 "Unlike the tyrants and despots that are common in the Americas, MacArthur desires not to be a Great Man, but to be a respected and mortal leader of Americans. Loyalty to the unchanging ideal of America must be put above himself, so long as MacArthur's popularity holds out."
 USA_martial_law:0 "Martial Law"
 USA_martial_law_desc:0 "At Congressional Approval, habeas corpus is suspended in accordance with the constitution. As the threat of invasion from Syndicalist and Populist forces still looms over part of the land. The writ of habeas corpus and free speech is still suspended for political expediency."
@@ -519,7 +519,7 @@ USA_office_of_war_information:0 "Signals Intelligence Service"
 USA_office_of_war_information_desc:0 "Cryptographic machines designed to interact with its sender to create an encryption that cannot be easily broken are the newest toy in our arsenal. The Signals Intelligence Service, which required the installation of underground cables to ensure secrecy, has finally been implemented."
 USA_allien_sedition_acts:0 "Executive Order 7250-A"
 USA_allien_sedition_acts_desc:0 "An Executive Order signed by President MacArthur hopes to bring an end the threat of foreign infiltration. This order restores some parts of the Alien and Sedition Act. State legislations are already appealing cases to the Supreme Court. It is firmly believed however that MacArthur's new judges will side in his favour."
-USA_empower_the_army:0 "Empower the Army"
+USA_empower_the_army:0 "육군에 권력부여"
 USA_empower_the_army_desc:0 "Crisis has already arisen in our new military administration. The Army and Navy are constantly at each other's throats over funding and political kickbacks. We need to relegate the Navy to a secondary governmental position and grant the Army full power."
 USA_loyal_officers:0 "Old Soldiers Never Die"
 USA_loyal_officers_desc:0 "The new regime recognizes the long struggle of the officers that left their homes to protect their nation, and to the many that didn't return home. Thanks to an Executive Order, Officers may now pursue a technical education in universities or go into law. This will ensure loyalty long after we fade away."
