--- a/Kaiserreich Korean Translation/localisation/KR_equip_naval_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_equip_naval_l_english.yml
@@ -101,7 +101,7 @@ light_cruiser_7_desc:0 "The cruisers of the late-war and early post-war period r
 heavy_cruiser_1:0 "초기 장갑순양함 (1900)"
 heavy_cruiser_2:0 "대형 장갑순양함 (1906)"
 heavy_cruiser_3:0 "Revived Armoured Cruiser (1929)"
-heavy_cruiser_4:0 "Improved Armoured Cruiser (1933)"
+heavy_cruiser_4:0 "개선된 장갑순양함 (1933)"
 heavy_cruiser_5:0 "Advanced Armoured Cruiser (1939)"
 heavy_cruiser_6:0 "현대 장갑순양함 (1944)"
 heavy_cruiser_1_desc:0 "Armoured cruisers were designed to act as independent, long-range, warships, capable of defeating anything less than a battleship and of outrunning battleships. Most carried 8 inch or equivalent guns."
