--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -169,7 +169,7 @@ USA_political_crisis:0 "정치적 위기"
 USA_political_crisis_desc:0 "The United States is in crisis. The Great Depression, which has been ravaging our nation for over a decade, has still not let up. Popular desperation has allowed the far-left Socialist Party of America and the far-right America First Party to gain strength in recent years. Others look to MacArthur and the Army as a way to solve both the depression and radicalization. Many worry that the United States could descend into civil war should our current situation not soon be resolved, or a radical presidential candidate win in the upcoming 1936 Elections."
 
 USA_new_year_strike_idea:0 "신년 파업"
-USA_native_code_talkers_idea:0 "Native Code Talkers"
+USA_native_code_talkers_idea:0 "원주민 암호 통신병"
 
 amcivwar_idea:0 "미국을 위해 싸우자!"
 USA_small_arms_industry_idea:0 "소형 화기 산업"
@@ -194,7 +194,7 @@ USA_civil_war_aftermath_idea4_desc:0 "Government-run agencies have started to pu
 USA_civil_war_aftermath_idea5:0 "Nearly-Full Recovery from the Civil War"
 USA_civil_war_aftermath_idea5_desc:0 "The scars of the war, visible just months ago, have largely faded from the country. Factories have re-opened, and trains, busses, and other forms of public transportation have started running with some regularity. America has nearly returned to its pre-war standard of living."
 USA_civil_war_depression_idea:0 "Economic Devastation from the Civil War"
-USA_civil_reconstruction_idea:0 "재건"
+USA_civil_reconstruction_idea:0 "국내 재건"
 USA_home_of_the_brave_idea:0 "용사들의 고향"
 USA_american_values_ideas:0 "미국의 가치"
 USA_cointelpro_idea:0 "코인텔프로"
@@ -227,7 +227,7 @@ USA_economic_recovery_idea:0 "Recovering from the Civil War"
 
 USA_recovering_economy_idea:0 "경제 복구"
 USA_federal_project_one_idea:0 "Federal Project One"
-USA_national_recovery_act_idea:0 "National Recovery Act"
+USA_national_recovery_act_idea:0 "국가 재건법"
 USA_workers_management_act_idea:0 "노동관계법"
 USA_social_security_idea:0 "사회 복지"
 USA_ccc_idea:0 "Civilian Conservation Corps"
@@ -447,7 +447,7 @@ USA_restore_legitimacy:0 "정통 복원"
 USA_restore_legitimacy_desc:0 "The numerous embassies we were not able to staff during the crisis have finally received relief. We shall re-establish ourselves to the world community as a stronger and more unified nation with an expanded diplomatic corps."
 USA_malice_and_charity:0 "Malice and Charity"
 USA_malice_and_charity_desc:0 "With the words of president Lincoln reminding us to 'bind the nation's wounds', Congress has created a system to reintegrate the rebel states on a massive scale. Through a nonpartisan Committee called 'Malice and Charity', districts can be re-added to the Union."
-USA_destroy_radicalism:0 "급진주의 파괴"
+USA_destroy_radicalism:0 "급진주의 척결"
 USA_destroy_radicalism_desc:0 "While the US Government tolerates political discourse, Congress has rallied against the syndicalist and distributionist platforms of Long and Reed. Legal bodies found to be advocating for trade unions or mutualist organizations will be prosecuted under the 1917 Sedition Act."
 USA_strengthen_democracy:0 "민주주의 강화"
 USA_strengthen_democracy_desc:0 "During the civil war, democratic processes were halted at the local level. Many elections in the border areas were skipped in order to focus more time on the existential crisis of the war for America. Democracy shall now rise from the ashes, and Congress has appointed a committee to ensure elections take place at the local level once more."
@@ -474,7 +474,7 @@ USA_electrification:0 "전철화 계획"
 USA_electrification_desc:0 "In order to accommodate the mandatory Third Rail, as well as ensure the safety of the more remote parts of America, an electrification project is approved to cross all state lines. Congress is now pulling state governments to fund transformers and hydroelectric power, as it is their responsibility."
 USA_business_subsidies:0 "사업 보조금"
 USA_business_subsidies_desc:0 "Small businesses in America have struggled to expand their employment opportunities, which is contributing to unemployment. The issue of unsafe working conditions returning to prominence due to the need for faster production has led to agitated workers. Congress has approved of a federal purse to subsidize small businesses."
-USA_rebuild_americas_industry:0 "Rebuild America's Industry"
+USA_rebuild_americas_industry:0 "미국 산업 재건"
 USA_rebuild_americas_industry_desc:0 "America's exports have fallen during the depression despite taking a laissez-faire position on trade laws. Exports are also one of the main ways we measure economic activity. We must invest in the tertiary services our industrial businesses use in order to lower their bottom line and increase output."
 USA_economic_investments:0 "경제 투자"
 USA_economic_investments_desc:0 "A more bold strategy is devised by Congress to assist in economic recovery. Traditional notions that government purchases are negatively associated with growth, newer theories hold that smart purchases can stimulate the economy."
@@ -534,13 +534,13 @@ USA_loyalty_to_america_desc:0 "Nationalism has the goal of strengthening loyalty
 USA_american_stratocracy:0 "미국의 군부정치"
 USA_american_stratocracy_desc:0 "MacArthur has finally restored nationalist fervour and Functional Democracy as he sees it. While some complain that career politicians have been replaced by officers, few will argue that the bureaucracy hasn't improved. The American people can now trust their politicians to use legal means to achieve their goals." 
 ### Civil War Avoided - Fair Deal ###
-USA_fair_deal:0 "공정 거래"
+USA_fair_deal:0 "공정 정책"
 USA_fair_deal_desc:0 "The Fair Deal is a long overdue and hotly debated set of economic reforms Congress has passed around since 1934. With the Crisis of 36 appearing to dissipate, it is time for Congress to act effectively to remedy the depression, else human sacrifice in the name of peace will be wasted."
 USA_brain_trust:0 "Brain Trust"
 USA_brain_trust_desc:0 "The presidential cabinet is not enough to guide the Fair Deal, as newer economic and industrial techniques have yet to reach the ivory towers of government. The President has appointed a 'Brain Trust' of law professors and deficit-spending economists. all purposefully apolitical."
 USA_federal_project_one:0 "Federal Project One"
 USA_federal_project_one_desc:0 "Before the Public Works Administration can be fully organized, a set of cultural projects are planned by the President to revitalize the ideals of the American Republic."
-USA_national_recovery_act:0 "National Recovery Act"
+USA_national_recovery_act:0 "국가 재건법"
 USA_national_recovery_act_desc:0 "The NRA emphasizes the use of public domain and work-living units instead of 'cut-throat competition' of regular contract work. Workers in the NRA will receive the benefit of a minimum wage and price-controlled work environments in constant to the old Company Store model."
 USA_expand_era:0 "Emergency Relief Act"
 USA_expand_era_desc:0 "If the government is to reverse unemployment, we must start with local and state governments. We can create and fund local agencies to give unskilled laborers temporary jobs in infrastructure and other necessary fields."
@@ -548,7 +548,7 @@ USA_civil_works_adminstration:0 "Civil Works Administration"
 USA_civil_works_adminstration_desc:0 "The President has approved of another piece of legislation to combat unemployment - the CWA. This is an ambitious project that will create a centralized leadership for the thousands of civil works projects created to stem unemployment."
 USA_create_the_ccc:0 "Create the CCC"
 USA_create_the_ccc_desc:0 "This country has suffered greatly due to mass unemployment stemming from the Depression. [Root.GetLeader] has pushed an executive order authorizing the creation of an agency to employ manual labourers fill out the spaces in employment for NRA projects."
-USA_industrial_recovery_act:0 "Industrial Recovery Act"
+USA_industrial_recovery_act:0 "산업 부흥법"
 USA_industrial_recovery_act_desc:0 "The market has deemed almost unlivable low wages that prevent Americans from lifting themselves up from poverty. The President has created the NIRA to help regulate prices on the supply side and encourage fir wages for fair work done."
 USA_workers_management_act:0 "노동관계법"
 USA_workers_management_act_desc:0 "A permanent solution to the labour crisis has presented itself in the form of a bi-partisan piece of legislation designed to protect workers’ rights. The NLRB will remedy unfair labour practices by both unions and business owners. The impartial wording of the agency has received widespread support from third parties."
@@ -558,7 +558,7 @@ USA_farmer_relief:0 "농부 구제"
 USA_farmer_relief_desc:0 "Sharecroppers and tenant farmers make up a significant portion of our constituency, especially in the core power of the Midwest. We must extend a credit program with very low-interest rates to farmers who apply to resettle land, especially land in the old South and Steel Belt."
 USA_rural_electrification:0 "Rural Electrification"
 USA_rural_electrification_desc:0 "The electricity network throughout the United States has regressed to that of the 1910s. This is Un-American and we need to ensure that our constituents can be properly informed about our nation's glory."
-USA_agricultural_adjustment_act:0 "Agricultural Adjustment Act"
+USA_agricultural_adjustment_act:0 "농사 조정법"
 USA_agricultural_adjustment_act_desc:0 "Newspaper stories during the hysteria of 36 were filled with horror stories of farmers burning rotting crops due to being unable to sell excess while city ghettos starved. Our solution to this is the Agricultural Adjustment Act, to create a policy on crop conservation."
 USA_public_works:0 "공공 사업 계획"
 USA_public_works_desc:0 "The ability to generate electricity, transport water, and ensure safe and efficient travel was lost during the civil war, but the Public Works Administration will fix all that. It is a fund that will ensure contractors pay their employees fairly."
@@ -569,7 +569,7 @@ USA_maritime_commision_desc:0 "The creation of a new Maritime Commission, or MAR
 USA_revitalized_economy:0 "Revitalized Economy"
 USA_revitalized_economy_desc:0 "As the GDP rises and the American standard of living rises and even exceeds pre-war levels, we come to understand the true goals of Hoover. His efforts along with so many others to create a Fair Deal was a paradigm shift in how our economy interacts within a capitalist system."
 ### Civil War Avoided - Politics ###
-USA_politics:0 "Democracy Prevails"
+USA_politics:0 "민주주의가 이기다."
 USA_politics_desc:0 "In our darkest hour, and when all seemed lost, the bright torch of liberty did not extinguish. The great challenge we face now is handling the newly expanded party platform, and countering the retreating radicals with fair judgment and democratically elected leadership."
 USA_charity_for_all:0 "우리 모두 미국인"
 USA_charity_for_all_desc:0 "No matter whether you are white, black, or brown; red banner or black banner in your hearts. We are all Americans. Congress has generously decided to honour the brave Americans that stood firm against the rebels, even within their own parties with a new civilian medal."
@@ -583,11 +583,11 @@ USA_contain_extremism:0 "Contain Extremism"
 USA_contain_extremism_desc:0 "While extending a hand to those that could have broken this nation is popular. The Federal Government is still responsible to uphold the law, and is still bringing charges against the horrible lynches, robberies, and mob rule that the AFP and SPA had promoted."
 USA_union_ties:0 "Union Ties"
 USA_union_ties_desc:0 "After the bill for the NLRB was defeated in Congress, a more ad-hoc solution was passed via executive order. This order re-engages antitrust laws and forbids federal agents from taking actions in favour or against strikes without the National Guard and IWW being present. No more strikebreaker gangs or wildcat strikes."
-USA_20th_amedment:0 "The 20th Amendment"
+USA_20th_amedment:0 "수정헌법 20조"
 USA_20th_amedment_desc:0 "With the electoral college called into question due to the crisis in the recent years, maybe the time has come to revise the system and come up with a better, more democratic solution for our representative republic..."
 USA_compact_with_the_people:0 "Compact With the People"
 USA_compact_with_the_people_desc:0 "The US Constitution is a compact with the people of the US. It is really the only oath necessary for former members of the AFP and SPA to take in order for them to be enfranchised once again in government. We will not require loyalty oaths to partisan groups, as that is undemocratic."
-USA_popular_democracy:0 "Popular Democracy"
+USA_popular_democracy:0 "대중 민주주의"
 USA_popular_democracy_desc:0 "Due to influence from the Progressives, instances of referendums have sharply increased following this election cycle. This along with a wholly powerful push to reform the electoral college is a sign of popular democracy, something Reed and Long claimed the US Government would never approach."
 USA_business_relations:0 "Good Business Relations"
 USA_business_relations_desc:0 "A permanent solution to the business crisis has presented itself in the form of the executive order to set up a national labour relations bureau. The NLRB will remedy unfair labour practices by both unions and business owners. The impartiality of the initial Board, which includes Union leaders, gives legitimacy to the act."
@@ -605,18 +605,18 @@ USA_bastion_of_liberty:0 "자유의 보루"
 USA_bastion_of_liberty_desc:0 "The United States has returned to its leading position on the world stage, ready to spread democracy and freedom. Like our ancestors, we will strive to be a City on a Hill."
 USA_renegotate_trade:0 "무역 관계 개선"
 USA_renegotate_trade_desc:0 "Trade is the lifeblood of American industry, and many are wary of investing after the civil unrest that ripped apart our country. We need to convince other nations that they can do business with America again."
-USA_new_day_in_america:0 "New Day In America"
+USA_new_day_in_america:0 "아메리카의 새로운 날"
 USA_new_day_in_america_desc:0 "While we have been tried much over the last few years, we have emerged stronger than ever before. Democracy will not be taken away from us so lightly! We must ensure the rest of the world is free now too!"
 ### Military - Army ###
-USA_defend_america:0 "Defend America"
+USA_defend_america:0 "미국 방어"
 USA_defend_america_desc:0 "Seizing the military installations of our allied Generals won't be enough to prevent rebellion. A War Plan must be rapidly drawn up and executed in the event of both a short and protracted war."
-USA_defense_contractors:0 "Arms Industry"
+USA_defense_contractors:0 "무기 산업"
 USA_defense_contractors_desc:0 "The small arms industry is in dire need of reform. In spite of the national emergency, independent contractors continue to waste money researching civilian firearms. A restriction on big game hunting later, and some manufacturers are beginning to focus on military arms."
 USA_military_industrial_complex:0 "Military Industrial Complex"
 USA_military_industrial_complex_desc:0 "The main trouble with creating a military industry is that facilities under our control were already reduced from the Great Depression to reduce redundancies. We have had to expand facilities and repurpose old buildings in order to manufacture parts needed for heavy weapons in our territory."
-USA_new_army_doctrines:0 "New Army Doctrines"
+USA_new_army_doctrines:0 "새로운 군 교리"
 USA_new_army_doctrines_desc:0 "A meeting of our ramshackle Chief of Staff and Generals have decided upon a course of wartime research. Although it will be expensive to devise and test new battle plans while we are already at war, the greatest struggle demands the strongest wills."
-USA_national_guards:0 "The National Guard"
+USA_national_guards:0 "주 방위군"
 USA_national_guards_desc:0 "The national guard, while steadfastly loyal to our government, is far too decentralised to serve as an effective fighting force in these trying times. We must restructure the organisation and create for it a formal independent command structure."
 USA_new_officers:0 "New Officers"
 USA_new_officers_desc:0 "We have made the bold decision to train officers in Bethesda Maryland. Classrooms may not be as well-equipped as West Point, but our officers will receive an education in hard knocks that will prove America's worth more than its refinement."
@@ -680,11 +680,11 @@ USA_american_jets_desc:0 "Off we go, into the wild blue yonder, flying high into
 ### Military - Navy ###
 USA_navy:0 "US Navy"
 USA_navy_desc:0 "The American navy, an institution whose history is so deeply interwoven with that of the nation as a whole, has been in steady decline after years of neglect. No more! We must again turn our attention to naval affairs."
-USA_grand_navy:0 "Great White Fleet"
+USA_grand_navy:0 "대 백색함대"
 USA_grand_navy_desc:0 "The Great White Fleet was the height to American naval power. We should look back at it for inspiration. A great fleet of battleships and dreadnoughts will ensure we always have naval superiority."
 USA_defend_our_trade:0 "Defending America's Trade"
 USA_defend_our_trade_desc:0 "Trade is the lifeblood of America. We should focus our naval doctrine on making sure that it is protected from enemy raids."
-USA_carriers:0 "Fleet Carrier Plan"
+USA_carriers:0 "항모전대 계획"
 USA_carriers_desc:0 "Carriers are the wave of the future. We should invest in their research and construction to better project naval power."
 USA_battleships:0 "Battleship Development"
 USA_battleships_desc:0 "Battleships are the king of the high seas. We should start research into new models with bigger guns and better anti-air protection."
