--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -12,18 +12,24 @@ VICTORY_POINTS_121:0 "야로슬라볼"
 VICTORY_POINTS_122:0 "베르겐"
 VICTORY_POINTS_153:0 "빌렘스타트"
 VICTORY_POINTS_156:0 "팔룬"
+VICTORY_POINTS_177:0 "포르드프랑스"
 VICTORY_POINTS_191:0 "허밍스타트"
 VICTORY_POINTS_192:0 "나르비크"
+VICTORY_POINTS_221:0 "입스위치"
 VICTORY_POINTS_241:0 "빌헬름스하펜"
+VICTORY_POINTS_294:0 "바리사프"
 VICTORY_POINTS_306:0 "스몰렌스크"
 VICTORY_POINTS_310:0 "드빈스크"
 VICTORY_POINTS_321:0 "로스토크"
+VICTORY_POINTS_322:0 "노리치"
+VICTORY_POINTS_331:0 "바브루이스크"
 VICTORY_POINTS_351:0 "뉴캐슬"
 VICTORY_POINTS_362:0 "단치히"
 VICTORY_POINTS_377:0 "카디프"
 VICTORY_POINTS_383:0 "예테보리"
 VICTORY_POINTS_385:0 "데리"
 VICTORY_POINTS_391:0 "암스테르담"
+VICTORY_POINTS_407:0 "스완지"
 VICTORY_POINTS_413:0 "보로네시"
 VICTORY_POINTS_418:0 "하르키우"
 VICTORY_POINTS_454:0 "아미앵"
@@ -33,10 +39,13 @@ VICTORY_POINTS_514:0 "드레스덴"
 VICTORY_POINTS_516:0 "브뤼셀"
 VICTORY_POINTS_525:0 "키예프"
 VICTORY_POINTS_526:0 "브라운슈바이크"
+VICTORY_POINTS_537:0 "쿠스트린"
 VICTORY_POINTS_540:0 "플리머스"
+VICTORY_POINTS_541:0 "니트러"
 VICTORY_POINTS_564:0 "카셀"
 VICTORY_POINTS_575:0 "되윙케르커"
 VICTORY_POINTS_587:0 "쾰른"
+VICTORY_POINTS_603:0 "베로나"
 VICTORY_POINTS_620:0 "리모주"
 VICTORY_POINTS_650:0 "산티아고"
 VICTORY_POINTS_657:0 "콘스탄차"
@@ -48,15 +57,19 @@ VICTORY_POINTS_690:0 "브라쇼브"
 VICTORY_POINTS_692:0 "뮌헨"
 VICTORY_POINTS_708:0 "아우크스부르크"
 VICTORY_POINTS_719:0 "노보로시스크"
+VICTORY_POINTS_733:0 "콩코드"
 VICTORY_POINTS_740:0 "빌바오"
 VICTORY_POINTS_748:0 "스타브로폴"
 VICTORY_POINTS_758:0 "라코루냐"
 VICTORY_POINTS_759:0 "우디네"
 VICTORY_POINTS_778:0 "안시"
 VICTORY_POINTS_788:0 "노퍽"
+VICTORY_POINTS_780:0 "발랑스"
+VICTORY_POINTS_782:0 "라벤나"
 VICTORY_POINTS_792:0 "베이루트"
 VICTORY_POINTS_819:0 "나폴리"
 VICTORY_POINTS_853:0 "피닉스"
+VICTORY_POINTS_860:0 "라리사"
 VICTORY_POINTS_863:0 "라리사"
 VICTORY_POINTS_875:0 "코르도바"
 VICTORY_POINTS_883:0 "포지아"
@@ -70,8 +83,10 @@ VICTORY_POINTS_947:0 "부르사"
 VICTORY_POINTS_949:0 "소피아"
 VICTORY_POINTS_957:0 "블라디보스토크"
 VICTORY_POINTS_958:0 "아비뇽"
+VICTORY_POINTS_969:0 "베르가모"
 VICTORY_POINTS_976:0 "라미아"
 VICTORY_POINTS_988:0 "코키야스타드"
+VICTORY_POINTS_989:0 "우지다"
 VICTORY_POINTS_1005:0 "안탈리아"
 VICTORY_POINTS_1006:0 "룽옌"
 VICTORY_POINTS_1025:0 "코쿠라"
@@ -98,7 +113,7 @@ VICTORY_POINTS_1184:0 "웨이현"
 VICTORY_POINTS_1188:0 "시멘"
 VICTORY_POINTS_1208:0 "쿠칭"
 VICTORY_POINTS_1221:0 "바탕가스"
-VICTORY_POINTS_1269:0 "과달카날"
+VICTORY_POINTS_1269:0 "호니아라"
 VICTORY_POINTS_1273:0 "고아"
 VICTORY_POINTS_1278:0 "우파"
 VICTORY_POINTS_1315:0 "타와이" #다웨이
@@ -106,19 +121,22 @@ VICTORY_POINTS_1319:0 "쿤밍"
 VICTORY_POINTS_1323:0 "세인트 조지"
 VICTORY_POINTS_1330:0 "양곤" #랑군
 VICTORY_POINTS_1349:0 "봄베이"
+VICTORY_POINTS_1352:0 "토피카"
 VICTORY_POINTS_1403:0 "모울메인" #모울메인
 VICTORY_POINTS_1408:0 "벤쿠버"
 VICTORY_POINTS_1409:0 "마두라이"
 VICTORY_POINTS_1413:0 "사마랑"
 VICTORY_POINTS_1415:0 "다구판"
 VICTORY_POINTS_1440:0 "산후안"
+VICTORY_POINTS_1445:0 "프랭크포트"
+VICTORY_POINTS_1453:0 "배턴루지"
 VICTORY_POINTS_1459:0 "타슈켄트"
 VICTORY_POINTS_1464:0 "비엔티안" #비앙찬
-VICTORY_POINTS_1467:0 "스테파나케르트"
+VICTORY_POINTS_1467:0 "슈샤"
 VICTORY_POINTS_1468:0 "더반"
 VICTORY_POINTS_1488:0 "치앙마이"
 VICTORY_POINTS_1492:0 "만달레이"
-VICTORY_POINTS_1536:0 "시르반"
+VICTORY_POINTS_1536:0 "주보프카"
 VICTORY_POINTS_1550:0 "산티아고데쿠바"
 VICTORY_POINTS_1562:0 "샌디에고"
 VICTORY_POINTS_1563:0 "빡쎄"
@@ -136,6 +154,7 @@ VICTORY_POINTS_1639:0 "바이아블랑카"
 VICTORY_POINTS_1641:0 "멜로"
 VICTORY_POINTS_1652:0 "퍼스"
 VICTORY_POINTS_1690:0 "스포캔"
+VICTORY_POINTS_1719:0 "세인트폴"
 VICTORY_POINTS_1747:0 "래피드시티"
 VICTORY_POINTS_1751:0 "아조레스"
 VICTORY_POINTS_1770:0 "디모인"
@@ -143,10 +162,12 @@ VICTORY_POINTS_1806:0 "털사"
 VICTORY_POINTS_1814:0 "웰링턴"
 VICTORY_POINTS_1821:0 "예카테린부르크"
 VICTORY_POINTS_1827:0 "덴버"
+VICTORY_POINTS_1834:0 "뫼렌"
 VICTORY_POINTS_1836:0 "비즈마크"
 VICTORY_POINTS_1843:0 "마이애미"
 VICTORY_POINTS_1847:0 "낸장"
 VICTORY_POINTS_1866:0 "미니애폴리스"
+VICTORY_POINTS_1887:0 "비야비센시오"
 VICTORY_POINTS_1891:0 "소코토"
 VICTORY_POINTS_1896:0 "타브리즈"
 VICTORY_POINTS_1903:0 "말라보"
@@ -160,12 +181,14 @@ VICTORY_POINTS_1951:0 "로메"
 VICTORY_POINTS_1962:0 "양취안"
 VICTORY_POINTS_1965:0 "멕시코 시티"
 VICTORY_POINTS_1969:0 "카치나"
+VICTORY_POINTS_1981:0 "시우다드과야나"
 VICTORY_POINTS_1984:0 "곤다르"
 VICTORY_POINTS_1990:0 "치앙라이"
+VICTORY_POINTS_1997:0 "메리다"
 VICTORY_POINTS_2023:0 "메델린"
 VICTORY_POINTS_2024:0 "룰라부르크"
 VICTORY_POINTS_2026:0 "이스파한"
-VICTORY_POINTS_2038:0 "프리타운"
+VICTORY_POINTS_2037:0 "치와와"
 VICTORY_POINTS_2038:0 "프레이스타드"
 VICTORY_POINTS_2041:1 "스리나가르"
 VICTORY_POINTS_2045:0 "텐슈이"
@@ -180,17 +203,17 @@ VICTORY_POINTS_2089:0 "바사"
 VICTORY_POINTS_2097:0 "바그다드"
 VICTORY_POINTS_2152:0 "아순시온"
 VICTORY_POINTS_2156:0 "피우라"
-VICTORY_POINTS_2164:0 "파라나"
+VICTORY_POINTS_2178:0 "테레지나"
 VICTORY_POINTS_2182:0 "푸노"
 VICTORY_POINTS_2189:0 "호바트"
 VICTORY_POINTS_2195:0 "로마플라타"
 VICTORY_POINTS_2196:0 "다르에스살람"
 VICTORY_POINTS_2197:0 "크리스트처치"
+VICTORY_POINTS_2207:0 "스바코프문트"
 VICTORY_POINTS_2210:0 "아레키파"
 VICTORY_POINTS_2211:0 "더니든"
 VICTORY_POINTS_2220:0 "우숨브라"
 VICTORY_POINTS_2227:0 "나탈"
-VICTORY_POINTS_2229:0 "스바코프문트"
 VICTORY_POINTS_2489:0 "트루크"
 VICTORY_POINTS_3010:0 "에드먼턴"
 VICTORY_POINTS_3022:0 "트론헤임"
@@ -200,11 +223,13 @@ VICTORY_POINTS_3122:0 "바사"
 VICTORY_POINTS_3134:0 "무르만스크"
 VICTORY_POINTS_3137:0 "탐페레"
 VICTORY_POINTS_3140:0 "티흐빈"
+VICTORY_POINTS_3150:0 "던디"
 VICTORY_POINTS_3151:0 "페트로그라드"
 VICTORY_POINTS_3152:0 "레발"
 VICTORY_POINTS_3211:0 "덴하그"
 VICTORY_POINTS_3273:0 "글래스고"
 VICTORY_POINTS_3284:0 "포트오브스페인"
+VICTORY_POINTS_3295:0 "토룬"
 VICTORY_POINTS_3320:0 "빌뉴스"
 VICTORY_POINTS_3325:0 "오덴세"
 VICTORY_POINTS_3326:0 "브레멘"
@@ -212,9 +237,9 @@ VICTORY_POINTS_3335:0 "브랸스크"
 VICTORY_POINTS_3338:0 "아르한겔스크"
 VICTORY_POINTS_3369:0 "브리스톨"
 VICTORY_POINTS_3379:0 "벨파스트"
+VICTORY_POINTS_3380:0 "엘빙"
 VICTORY_POINTS_3392:0 "베레스티야"
 VICTORY_POINTS_3393:0 "흐르드나"
-VICTORY_POINTS_3396:0 "갈웨이"
 VICTORY_POINTS_3456:0 "카라치"
 VICTORY_POINTS_3501:0 "도버"
 VICTORY_POINTS_3509:0 "르망"
@@ -230,30 +255,41 @@ VICTORY_POINTS_3552:0 "브레스트"
 VICTORY_POINTS_3569:0 "브르노"
 VICTORY_POINTS_3578:0 "사라토프"
 VICTORY_POINTS_3580:0 "쿠르스크"
+VICTORY_POINTS_3586:0 "쳉스토호바"
 VICTORY_POINTS_3594:0 "비시"
+VICTORY_POINTS_3617:0 "노비사드"
 VICTORY_POINTS_3651:0 "나팔리"
 VICTORY_POINTS_3652:0 "디종"
 VICTORY_POINTS_3653:0 "바투미"
+VICTORY_POINTS_3655:0 "부르주"
+VICTORY_POINTS_3658:0 "쿠타이시"
 VICTORY_POINTS_3663:0 "플로이에슈티"
 VICTORY_POINTS_3671:0 "투르"
 VICTORY_POINTS_3672:0 "그로즈니"
 VICTORY_POINTS_3686:0 "세바스토폴"
+VICTORY_POINTS_3696:0 "너지바러드"
 VICTORY_POINTS_3700:0 "포조니"
 VICTORY_POINTS_3706:0 "캘거리"
 VICTORY_POINTS_3707:0 "키시너우"
+VICTORY_POINTS_3708:0 "링컨"
 VICTORY_POINTS_3720:0 "마이코프"
+VICTORY_POINTS_3733:0 "로체스터"
 VICTORY_POINTS_3734:0 "예카테리노다르"
 VICTORY_POINTS_3768:0 "그르노블"
 VICTORY_POINTS_3775:0 "토론토"
 VICTORY_POINTS_3778:0 "오타와"
 VICTORY_POINTS_3780:0 "밀라노"
+VICTORY_POINTS_3798:0 "코임브라"
 VICTORY_POINTS_3816:0 "사라고사"
+VICTORY_POINTS_3823:0 "리치먼드"
+VICTORY_POINTS_3834:0 "투손"
 VICTORY_POINTS_3838:0 "아작시오"
 VICTORY_POINTS_3878:0 "뉴욕"
 VICTORY_POINTS_3882:0 "스코페"
 VICTORY_POINTS_3920:0 "레옹"
 VICTORY_POINTS_3924:0 "스플리트"
 VICTORY_POINTS_3938:0 "마드리드"
+VICTORY_POINTS_3939:0 "크랄레보"
 VICTORY_POINTS_3957:0 "워싱턴"
 VICTORY_POINTS_3960:0 "달라스"
 VICTORY_POINTS_3986:0 "톨레도"
@@ -267,6 +303,7 @@ VICTORY_POINTS_4056:0 "부산" #부산/부산
 VICTORY_POINTS_4075:0 "하노이"
 VICTORY_POINTS_4076:0 "알렉산드리아"
 VICTORY_POINTS_4102:0 "카고시마"
+VICTORY_POINTS_4108:0 "마라케시"
 VICTORY_POINTS_4109:0 "아테네"
 VICTORY_POINTS_4111:0 "삼"
 VICTORY_POINTS_4112:0 "이즈미르"
@@ -279,7 +316,6 @@ VICTORY_POINTS_4180:0 "호놀룰루"
 VICTORY_POINTS_4189:0 "마카오"
 VICTORY_POINTS_4196:0 "푸저우"
 VICTORY_POINTS_4206:0 "텔압브"
-VICTORY_POINTS_4226:0 "부인"
 VICTORY_POINTS_4241:0 "다바오"
 VICTORY_POINTS_4245:0 "콜카타"
 VICTORY_POINTS_4250:0 "카라간다"
@@ -291,12 +327,13 @@ VICTORY_POINTS_4288:0 "칼라판"
 VICTORY_POINTS_4302:0 "시암 나콘" #시암립
 VICTORY_POINTS_4312:0 "나콘시타마라트"
 VICTORY_POINTS_4318:0 "푸타오"
+VICTORY_POINTS_4328:0 "세일럼"
 VICTORY_POINTS_4329:0 "포트 모르즈비"
 VICTORY_POINTS_4333:0 "아크몰린스크"
 VICTORY_POINTS_4344:0 "마이소르"
 VICTORY_POINTS_4345:0 "몬트리올"
 VICTORY_POINTS_4348:0 "깐차나부리"
-VICTORY_POINTS_4357:0 "북부 팔라우"
+VICTORY_POINTS_4357:0 "바벨다오브"
 VICTORY_POINTS_4363:0 "플래이꾸"
 VICTORY_POINTS_4379:0 "후에"
 VICTORY_POINTS_4397:0 "빈"
@@ -305,20 +342,24 @@ VICTORY_POINTS_4405:0 "나트랑"
 VICTORY_POINTS_4424:0 "조흐루"
 VICTORY_POINTS_4433:0 "사타힙" #촌부리
 VICTORY_POINTS_4436:0 "펠로타스"
+VICTORY_POINTS_4445:0 "몬트필리어"
 VICTORY_POINTS_4459:0 "고라크푸르"
 VICTORY_POINTS_4464:0 "빌록시"
 VICTORY_POINTS_4504:0 "구이양"
 VICTORY_POINTS_4512:0 "디야르바키르"
 VICTORY_POINTS_4516:0 "파트나"
+VICTORY_POINTS_4518:0 "프레즈노"
 VICTORY_POINTS_4528:0 "스프링복"
 VICTORY_POINTS_4529:0 "디엔비엔푸"
 VICTORY_POINTS_4543:0 "오클랜드"
+VICTORY_POINTS_4565:0 "잭슨"
 VICTORY_POINTS_4569:0 "세인트루이스"
 VICTORY_POINTS_4572:0 "창춘"
 VICTORY_POINTS_4575:0 "우루구아이아나"
 VICTORY_POINTS_4587:0 "마링가"
 VICTORY_POINTS_4589:0 "산타마리아"
 VICTORY_POINTS_4598:0 "산티아고데로스카바예로스"
+VICTORY_POINTS_4607:0 "카슨 시티"
 VICTORY_POINTS_4608:0 "수라바야"
 VICTORY_POINTS_4613:0 "루앙프라방"
 VICTORY_POINTS_4619:0 "우창"
@@ -327,11 +368,14 @@ VICTORY_POINTS_4641:0 "포르토프랭스"
 VICTORY_POINTS_4652:0 "메단"
 VICTORY_POINTS_4654:0 "로이코"
 VICTORY_POINTS_4696:0 "포트 엘리자베스"
+VICTORY_POINTS_4704:0 "쿠물"
 VICTORY_POINTS_4709:0 "디화"
+VICTORY_POINTS_4723:0 "샤이엔"
 VICTORY_POINTS_4724:0 "크라스노야르스크"
 VICTORY_POINTS_4739:0 "새스커툰"
 VICTORY_POINTS_4745:0 "하이라얼"
 VICTORY_POINTS_4797:0 "이르쿠츠크"
+VICTORY_POINTS_4799:0 "라스베가스"
 VICTORY_POINTS_4801:0 "우르가"
 VICTORY_POINTS_4860:0 "그레이트 폴스"
 VICTORY_POINTS_4865:0 "솔트레이크시티"
@@ -339,6 +383,7 @@ VICTORY_POINTS_4872:0 "위니펙"
 VICTORY_POINTS_4879:0 "빈트후크"
 VICTORY_POINTS_4883:0 "나그푸르"
 VICTORY_POINTS_4888:0 "시닝"
+VICTORY_POINTS_4892:0 "산페르난도데아푸레"
 VICTORY_POINTS_4893:0 "헤라트"
 VICTORY_POINTS_4915:0 "아그라"
 VICTORY_POINTS_4925:0 "청두"
@@ -349,6 +394,7 @@ VICTORY_POINTS_4956:0 "산루이스포토시주"
 VICTORY_POINTS_4982:0 "조지타운"
 VICTORY_POINTS_4987:0 "카트만두"
 VICTORY_POINTS_4997:0 "마이두구리"
+VICTORY_POINTS_5000:0 "바리나스"
 VICTORY_POINTS_5010:0 "아디스아바바"
 VICTORY_POINTS_5012:0 "빌랴시스네로스"
 VICTORY_POINTS_5029:0 "마슈하드"
@@ -382,6 +428,7 @@ VICTORY_POINTS_6039:0 "부에아"
 VICTORY_POINTS_6050:0 "스톡홀름"
 VICTORY_POINTS_6103:0 "런던"
 VICTORY_POINTS_6115:0 "오슬로"
+VICTORY_POINTS_6237:0 "노팅엄"
 VICTORY_POINTS_6245:0 "티버"
 VICTORY_POINTS_6262:0 "툴라"
 VICTORY_POINTS_6282:0 "슈테틴"
@@ -393,6 +440,7 @@ VICTORY_POINTS_6313:0 "리머릭"
 VICTORY_POINTS_6318:0 "맨체스터"
 VICTORY_POINTS_6332:0 "쾨니히스베르크"
 VICTORY_POINTS_6338:0 "카잔"
+VICTORY_POINTS_6363:0 "뱅거" #End
 VICTORY_POINTS_6364:0 "오르후스"
 VICTORY_POINTS_6377:0 "하노버"
 VICTORY_POINTS_6380:0 "모스크바"
